deploy: 64ac827c793ae11ba87c9123129088f1fbd8b198

--- a/tutorials/f_cutting.ipynb
+++ b/tutorials/f_cutting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3363671",
+   "id": "cbc51d9f",
    "metadata": {},
    "source": [
     "# Cutting\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15598364",
+   "id": "d4f7a548",
    "metadata": {},
    "source": [
     "## Cutting\n",
@@ -21,13 +21,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "076b26e3",
+   "id": "80d2e623",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:15.864857Z",
-     "iopub.status.busy": "2024-05-08T13:08:15.864657Z",
-     "iopub.status.idle": "2024-05-08T13:08:17.028097Z",
-     "shell.execute_reply": "2024-05-08T13:08:17.027494Z"
+     "iopub.execute_input": "2024-05-08T14:52:17.679526Z",
+     "iopub.status.busy": "2024-05-08T14:52:17.679321Z",
+     "iopub.status.idle": "2024-05-08T14:52:18.881811Z",
+     "shell.execute_reply": "2024-05-08T14:52:18.881201Z"
     }
    },
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57acd268",
+   "id": "522b85a5",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. Let's look at the 1D case"
@@ -73,13 +73,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe07f00b",
+   "id": "ce53116f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:17.030814Z",
-     "iopub.status.busy": "2024-05-08T13:08:17.030273Z",
-     "iopub.status.idle": "2024-05-08T13:08:17.034378Z",
-     "shell.execute_reply": "2024-05-08T13:08:17.033638Z"
+     "iopub.execute_input": "2024-05-08T14:52:18.884758Z",
+     "iopub.status.busy": "2024-05-08T14:52:18.884171Z",
+     "iopub.status.idle": "2024-05-08T14:52:18.888038Z",
+     "shell.execute_reply": "2024-05-08T14:52:18.887431Z"
     }
    },
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92f4772",
+   "id": "ab140c2e",
    "metadata": {},
    "source": [
     "So we just need to specify the number of unit cells. "
@@ -126,13 +126,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed8d980d",
+   "id": "ad14b26c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:17.036671Z",
-     "iopub.status.busy": "2024-05-08T13:08:17.036322Z",
-     "iopub.status.idle": "2024-05-08T13:08:18.571874Z",
-     "shell.execute_reply": "2024-05-08T13:08:18.571191Z"
+     "iopub.execute_input": "2024-05-08T14:52:18.890271Z",
+     "iopub.status.busy": "2024-05-08T14:52:18.889914Z",
+     "iopub.status.idle": "2024-05-08T14:52:20.401275Z",
+     "shell.execute_reply": "2024-05-08T14:52:20.400646Z"
     }
    },
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3a98fd",
+   "id": "8d05bd66",
    "metadata": {},
    "source": [
     "You may notice this is the configuration with edge states in the band gap"
@@ -151,13 +151,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c894331",
+   "id": "6958f9a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:18.575052Z",
-     "iopub.status.busy": "2024-05-08T13:08:18.574534Z",
-     "iopub.status.idle": "2024-05-08T13:08:21.057618Z",
-     "shell.execute_reply": "2024-05-08T13:08:21.056944Z"
+     "iopub.execute_input": "2024-05-08T14:52:20.404373Z",
+     "iopub.status.busy": "2024-05-08T14:52:20.403854Z",
+     "iopub.status.idle": "2024-05-08T14:52:22.815293Z",
+     "shell.execute_reply": "2024-05-08T14:52:22.814679Z"
     }
    },
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68874193",
+   "id": "d33b027d",
    "metadata": {},
    "source": [
     "If you don't want this, just delete the edges by removing the first and the last orbital in the list"
@@ -187,13 +187,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "34c2724d",
+   "id": "b2bfb949",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:21.059957Z",
-     "iopub.status.busy": "2024-05-08T13:08:21.059756Z",
-     "iopub.status.idle": "2024-05-08T13:08:23.431437Z",
-     "shell.execute_reply": "2024-05-08T13:08:23.430756Z"
+     "iopub.execute_input": "2024-05-08T14:52:22.817795Z",
+     "iopub.status.busy": "2024-05-08T14:52:22.817584Z",
+     "iopub.status.idle": "2024-05-08T14:52:25.215091Z",
+     "shell.execute_reply": "2024-05-08T14:52:25.214472Z"
     }
    },
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e4baaa0",
+   "id": "fc38c532",
    "metadata": {},
    "source": [
     "That's pretty much all about cutting in 1D. Let's cover 2D."
@@ -236,13 +236,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c54c179",
+   "id": "f61bef06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:23.434167Z",
-     "iopub.status.busy": "2024-05-08T13:08:23.433550Z",
-     "iopub.status.idle": "2024-05-08T13:08:23.437688Z",
-     "shell.execute_reply": "2024-05-08T13:08:23.437111Z"
+     "iopub.execute_input": "2024-05-08T14:52:25.217616Z",
+     "iopub.status.busy": "2024-05-08T14:52:25.217252Z",
+     "iopub.status.idle": "2024-05-08T14:52:25.221112Z",
+     "shell.execute_reply": "2024-05-08T14:52:25.220511Z"
     }
    },
    "outputs": [
@@ -268,7 +268,7 @@
       "    Returns:\n",
       "        list: A list of orbitals positioned within the specified polygon and satisfying the neighbor condition.\n",
       "\n",
-      "    Details:\n",
+      "    Note:\n",
       "        The function first translates the polygon into the positive xy-plane to avoid negative coordinates,\n",
       "        then calculates the extent of the grid needed to cover the polygon based on the material's lattice basis.\n",
       "        Atom positions are then pruned based on the minimum neighbor count using the `_prune_neighbors` nested function,\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b4120b",
+   "id": "ef51b5db",
    "metadata": {},
    "source": [
     "This is more complex. We can give an arbitrary polygon to the cutting function, so let's do this by approximating a potato (this is an internal joke in Carsten's group)."
@@ -293,13 +293,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7243b0c1",
+   "id": "539cdb6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:23.439965Z",
-     "iopub.status.busy": "2024-05-08T13:08:23.439596Z",
-     "iopub.status.idle": "2024-05-08T13:08:23.466291Z",
-     "shell.execute_reply": "2024-05-08T13:08:23.465618Z"
+     "iopub.execute_input": "2024-05-08T14:52:25.223536Z",
+     "iopub.status.busy": "2024-05-08T14:52:25.223169Z",
+     "iopub.status.idle": "2024-05-08T14:52:25.250762Z",
+     "shell.execute_reply": "2024-05-08T14:52:25.250171Z"
     }
    },
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5acf4bec",
+   "id": "c58d5ab0",
    "metadata": {},
    "source": [
     "Now, we cut a flake"
@@ -329,13 +329,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3e2d05a9",
+   "id": "077ebaf9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:23.469448Z",
-     "iopub.status.busy": "2024-05-08T13:08:23.469054Z",
-     "iopub.status.idle": "2024-05-08T13:08:27.606437Z",
-     "shell.execute_reply": "2024-05-08T13:08:27.605891Z"
+     "iopub.execute_input": "2024-05-08T14:52:25.253689Z",
+     "iopub.status.busy": "2024-05-08T14:52:25.253128Z",
+     "iopub.status.idle": "2024-05-08T14:52:29.450181Z",
+     "shell.execute_reply": "2024-05-08T14:52:29.449513Z"
     }
    },
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c37d0e",
+   "id": "e3778f3e",
    "metadata": {},
    "source": [
     "\n",
@@ -369,13 +369,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "466aadec",
+   "id": "340d4d25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:27.609400Z",
-     "iopub.status.busy": "2024-05-08T13:08:27.609007Z",
-     "iopub.status.idle": "2024-05-08T13:08:27.612886Z",
-     "shell.execute_reply": "2024-05-08T13:08:27.612183Z"
+     "iopub.execute_input": "2024-05-08T14:52:29.453337Z",
+     "iopub.status.busy": "2024-05-08T14:52:29.452871Z",
+     "iopub.status.idle": "2024-05-08T14:52:29.457078Z",
+     "shell.execute_reply": "2024-05-08T14:52:29.456406Z"
     }
    },
    "outputs": [
@@ -399,9 +399,11 @@
       "        jax.numpy.ndarray: An array of shape (5, 2), representing the vertices of the rectangle,\n",
       "                           starting and ending at the same vertex to facilitate drawing closed shapes.\n",
       "\n",
-      "    Example:\n",
+      "    Note:\n",
+      "        ```python\n",
       "        # Rectangle with length 2.0 and height 1.0 angstroms\n",
       "        rectangle = Rectangle(2.0, 1.0)\n",
+      "        ```\n",
       "\n"
      ]
     }
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd8c527",
+   "id": "92f4fbf8",
    "metadata": {},
    "source": [
     "## Bearded configurations"
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8405c33a",
+   "id": "96f899b8",
    "metadata": {},
    "source": [
     "Cutting removes \"dangling\" atoms by default. Dangling atoms are defined by their neighbor number: if they have only one neighbor, they are removed. If you want to deactivate this to keep \"bearded\" configurations, do"
@@ -430,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1a01dd4",
+   "id": "a4c86427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:27.615567Z",
-     "iopub.status.busy": "2024-05-08T13:08:27.614995Z",
-     "iopub.status.idle": "2024-05-08T13:08:29.306423Z",
-     "shell.execute_reply": "2024-05-08T13:08:29.305829Z"
+     "iopub.execute_input": "2024-05-08T14:52:29.459684Z",
+     "iopub.status.busy": "2024-05-08T14:52:29.459219Z",
+     "iopub.status.idle": "2024-05-08T14:52:31.017472Z",
+     "shell.execute_reply": "2024-05-08T14:52:31.016928Z"
     },
     "lines_to_next_cell": 2
    },
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88410e1b",
+   "id": "e0d8c5cf",
    "metadata": {},
    "source": [
     "## Layers"
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98dbdabe",
+   "id": "2ed9faac",
    "metadata": {},
    "source": [
     "If you have a naturally layered structure, eg MoS2, and you cut by keeping every atom with < 2 neighbors, you get"
@@ -475,13 +477,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ce638a76",
+   "id": "0932c48e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:29.309654Z",
-     "iopub.status.busy": "2024-05-08T13:08:29.309166Z",
-     "iopub.status.idle": "2024-05-08T13:08:32.126178Z",
-     "shell.execute_reply": "2024-05-08T13:08:32.125508Z"
+     "iopub.execute_input": "2024-05-08T14:52:31.020078Z",
+     "iopub.status.busy": "2024-05-08T14:52:31.019860Z",
+     "iopub.status.idle": "2024-05-08T14:52:33.696328Z",
+     "shell.execute_reply": "2024-05-08T14:52:33.695788Z"
     }
    },
    "outputs": [
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213bf3f0",
+   "id": "2239b3e6",
    "metadata": {},
    "source": [
     "So there seem to be dangling atoms. The reason is that in \"3d\", we need to remove < 3 neighbors"
@@ -513,13 +515,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0ba6a674",
+   "id": "fb036512",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:32.129488Z",
-     "iopub.status.busy": "2024-05-08T13:08:32.128970Z",
-     "iopub.status.idle": "2024-05-08T13:08:33.421147Z",
-     "shell.execute_reply": "2024-05-08T13:08:33.420595Z"
+     "iopub.execute_input": "2024-05-08T14:52:33.699302Z",
+     "iopub.status.busy": "2024-05-08T14:52:33.698790Z",
+     "iopub.status.idle": "2024-05-08T14:52:34.947663Z",
+     "shell.execute_reply": "2024-05-08T14:52:34.946975Z"
     }
    },
    "outputs": [
