--- a/tutorials/j_defining_materials.ipynb
+++ b/tutorials/j_defining_materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15f5a90c",
+   "id": "b8a92a81",
    "metadata": {},
    "source": [
     "# Defining Materials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611573e1",
+   "id": "c16d2b60",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d21a0986",
+   "id": "9ac526b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:37.183251Z",
-     "iopub.status.busy": "2024-05-08T13:08:37.183053Z",
-     "iopub.status.idle": "2024-05-08T13:08:38.400149Z",
-     "shell.execute_reply": "2024-05-08T13:08:38.399413Z"
+     "iopub.execute_input": "2024-05-08T14:52:38.807451Z",
+     "iopub.status.busy": "2024-05-08T14:52:38.807255Z",
+     "iopub.status.idle": "2024-05-08T14:52:40.028683Z",
+     "shell.execute_reply": "2024-05-08T14:52:40.028078Z"
     }
    },
    "outputs": [
@@ -56,13 +56,13 @@
       "                                         an optional mathematical expression defining the interaction for the coupling beyound \n",
       "                                         the len(parameters) - th nearest neighbor.\n",
       "\n",
-      "    Usage:\n",
+      "    Note:\n",
       "        The `Material` class is used to define a material's structure and properties step-by-step.\n",
       "        An example is constructing the material graphene, with specific lattice properties,\n",
       "        orbitals corresponding to carbon's p_z orbitals, and defining hamiltonian and Coulomb interactions\n",
       "        among these orbitals. \n",
       "\n",
-      "    Example:\n",
+      "        ```python\n",
       "        graphene = (\n",
       "            Material(\"graphene\")\n",
       "            .lattice_constant(2.46)\n",
@@ -76,15 +76,16 @@
       "            .add_interaction(\n",
       "                \"hamiltonian\",\n",
       "                participants=(\"pz\", \"pz\"),\n",
-      "                parameters=[0.0, 2.66], # no expression given => we online look at onsite and nearest neighbors\n",
+      "                parameters=[0.0, 2.66],\n",
       "            )\n",
       "            .add_interaction(\n",
       "                \"coulomb\",\n",
       "                participants=(\"pz\", \"pz\"),\n",
-      "                parameters=[16.522, 8.64, 5.333], # we look at onsite, nn, nnn couplings\n",
-      "                expression=lambda d: 14.399 / d # for nnnn and more, we apply the coulomb law\n",
+      "                parameters=[16.522, 8.64, 5.333],\n",
+      "                expression=lambda r : 1/r + 0j\n",
       "            )\n",
       "        )\n",
+      "        ```\n",
       "    \n"
      ]
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf8dad6",
+   "id": "dff503a4",
    "metadata": {},
    "source": [
     "So, the Material class essentially defines a small language we can use to specify a material. The Hubbard model would look like this"
@@ -105,13 +106,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "410883ea",
+   "id": "fdd21fae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:38.403371Z",
-     "iopub.status.busy": "2024-05-08T13:08:38.402734Z",
-     "iopub.status.idle": "2024-05-08T13:08:38.418820Z",
-     "shell.execute_reply": "2024-05-08T13:08:38.418278Z"
+     "iopub.execute_input": "2024-05-08T14:52:40.031496Z",
+     "iopub.status.busy": "2024-05-08T14:52:40.031022Z",
+     "iopub.status.idle": "2024-05-08T14:52:40.046535Z",
+     "shell.execute_reply": "2024-05-08T14:52:40.045886Z"
     }
    },
    "outputs": [],
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d7f2a5",
+   "id": "71d19594",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -159,13 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ad5d5a19",
+   "id": "ca3f6a7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:38.421484Z",
-     "iopub.status.busy": "2024-05-08T13:08:38.421098Z",
-     "iopub.status.idle": "2024-05-08T13:08:38.425276Z",
-     "shell.execute_reply": "2024-05-08T13:08:38.424715Z"
+     "iopub.execute_input": "2024-05-08T14:52:40.049333Z",
+     "iopub.status.busy": "2024-05-08T14:52:40.048846Z",
+     "iopub.status.idle": "2024-05-08T14:52:40.053147Z",
+     "shell.execute_reply": "2024-05-08T14:52:40.052663Z"
     }
    },
    "outputs": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc0a129",
+   "id": "6c0ecb6b",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -209,13 +210,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5d186cce",
+   "id": "dbcb3dab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:38.427636Z",
-     "iopub.status.busy": "2024-05-08T13:08:38.427244Z",
-     "iopub.status.idle": "2024-05-08T13:08:38.431031Z",
-     "shell.execute_reply": "2024-05-08T13:08:38.430388Z"
+     "iopub.execute_input": "2024-05-08T14:52:40.055587Z",
+     "iopub.status.busy": "2024-05-08T14:52:40.055117Z",
+     "iopub.status.idle": "2024-05-08T14:52:40.058740Z",
+     "shell.execute_reply": "2024-05-08T14:52:40.058147Z"
     }
    },
    "outputs": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a492503d",
+   "id": "49502255",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -265,13 +266,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "256aece0",
+   "id": "220488d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:38.433535Z",
-     "iopub.status.busy": "2024-05-08T13:08:38.433038Z",
-     "iopub.status.idle": "2024-05-08T13:08:40.140615Z",
-     "shell.execute_reply": "2024-05-08T13:08:40.139944Z"
+     "iopub.execute_input": "2024-05-08T14:52:40.061056Z",
+     "iopub.status.busy": "2024-05-08T14:52:40.060630Z",
+     "iopub.status.idle": "2024-05-08T14:52:41.829717Z",
+     "shell.execute_reply": "2024-05-08T14:52:41.829061Z"
     }
    },
    "outputs": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "058c1681",
+   "id": "59212abf",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "689c4191",
+   "id": "73fe6b0d",
    "metadata": {},
    "source": [
     "You can just copy the material you want to modify and change/override its attributes. As an example, we will turn our ordinary graphene model into a variant of the Haldane model by introducing complex nnn hoppings"
@@ -317,13 +318,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2243d273",
+   "id": "73489617",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:40.143590Z",
-     "iopub.status.busy": "2024-05-08T13:08:40.143264Z",
-     "iopub.status.idle": "2024-05-08T13:08:40.165489Z",
-     "shell.execute_reply": "2024-05-08T13:08:40.164482Z"
+     "iopub.execute_input": "2024-05-08T14:52:41.833107Z",
+     "iopub.status.busy": "2024-05-08T14:52:41.832837Z",
+     "iopub.status.idle": "2024-05-08T14:52:41.857406Z",
+     "shell.execute_reply": "2024-05-08T14:52:41.856735Z"
     }
    },
    "outputs": [
@@ -344,7 +345,15 @@
       "  Interactions:\n",
       "   Type: hamiltonian, Participants: ('pz', 'pz'):\n",
       "                    NN Couplings: 0, 1.0, 0.1j\n",
-      "                    Other neighbors: Zero coupling\n",
+      "                    Other neighbors: \n",
+      "    Returns a zero coupling constant as a complex number.\n",
+      "\n",
+      "    Args:\n",
+      "        d (float): A parameter (typically representing distance or some other factor) that is ignored by the function, as the output is always zero.\n",
+      "\n",
+      "    Returns:\n",
+      "        complex: Returns 0.0 as a complex number (0.0j).\n",
+      "    \n",
       "   Type: coulomb, Participants: ('pz', 'pz'):\n",
       "                    NN Couplings: 16.522, 8.64, 5.333\n",
       "                    Other neighbors: Coupling with a (regularized) Coulomb-like potential\n",
@@ -362,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63a3e126",
+   "id": "5f0ece0f",
    "metadata": {},
    "source": [
     "The Haldane model breaks inversion symmetry explicity by a staggered onsite potential. There is no (nice) way to achieve this with a few modifications from the normal graphene model, so we simply use the versatile properties of the orbital list datatype when we cut finite flakes"
@@ -371,13 +380,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5567eba5",
+   "id": "b8570651",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:40.168737Z",
-     "iopub.status.busy": "2024-05-08T13:08:40.168445Z",
-     "iopub.status.idle": "2024-05-08T13:08:44.526749Z",
-     "shell.execute_reply": "2024-05-08T13:08:44.526202Z"
+     "iopub.execute_input": "2024-05-08T14:52:41.860810Z",
+     "iopub.status.busy": "2024-05-08T14:52:41.860549Z",
+     "iopub.status.idle": "2024-05-08T14:52:46.167112Z",
+     "shell.execute_reply": "2024-05-08T14:52:46.166471Z"
     }
    },
    "outputs": [
@@ -402,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5e7897",
+   "id": "28d512a0",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -411,13 +420,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "72250a09",
+   "id": "10fb7a86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:44.529591Z",
-     "iopub.status.busy": "2024-05-08T13:08:44.529206Z",
-     "iopub.status.idle": "2024-05-08T13:08:48.165951Z",
-     "shell.execute_reply": "2024-05-08T13:08:48.165275Z"
+     "iopub.execute_input": "2024-05-08T14:52:46.170121Z",
+     "iopub.status.busy": "2024-05-08T14:52:46.169702Z",
+     "iopub.status.idle": "2024-05-08T14:52:49.784045Z",
+     "shell.execute_reply": "2024-05-08T14:52:49.783373Z"
     },
     "lines_to_next_cell": 2
    },
@@ -441,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca2d6ee",
+   "id": "8f69c252",
    "metadata": {},
    "source": [
     "## Handling non-periodic dimensions"
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbf4d64",
+   "id": "f655ea9b",
    "metadata": {},
    "source": [
     "Say you want to have a custom ssh chain with 2 atoms in the unit cell, but displace one of the atoms in y-direction. You do this by including a second basis vector in y-direction and give the atom you want to displace a non-vanishing y-coordinate. To not get a 2D lattice, you have to specify explicitly which direction(s) you want to be periodically repeated."
@@ -458,13 +467,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "887f7d0e",
+   "id": "8cd4aae7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:08:48.169485Z",
-     "iopub.status.busy": "2024-05-08T13:08:48.169088Z",
-     "iopub.status.idle": "2024-05-08T13:08:51.392509Z",
-     "shell.execute_reply": "2024-05-08T13:08:51.391824Z"
+     "iopub.execute_input": "2024-05-08T14:52:49.787400Z",
+     "iopub.status.busy": "2024-05-08T14:52:49.786965Z",
+     "iopub.status.idle": "2024-05-08T14:52:52.992778Z",
+     "shell.execute_reply": "2024-05-08T14:52:52.992076Z"
     },
     "lines_to_next_cell": 0
    },
@@ -522,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4555b476",
+   "id": "b8857201",
    "metadata": {
     "lines_to_next_cell": 2
    },
