--- a/tutorials/e_electric_fields.ipynb
+++ b/tutorials/e_electric_fields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb2408f7",
+   "id": "09f4a7a4",
    "metadata": {},
    "source": [
     "# Electric Fields\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347b6a2c",
+   "id": "f08c4bac",
    "metadata": {},
    "source": [
     "\n",
@@ -22,13 +22,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bf75280",
+   "id": "b42c71c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:10:00.090946Z",
-     "iopub.status.busy": "2024-05-08T13:10:00.090751Z",
-     "iopub.status.idle": "2024-05-08T13:10:01.246633Z",
-     "shell.execute_reply": "2024-05-08T13:10:01.246028Z"
+     "iopub.execute_input": "2024-05-08T14:53:59.733269Z",
+     "iopub.status.busy": "2024-05-08T14:53:59.732800Z",
+     "iopub.status.idle": "2024-05-08T14:54:00.901418Z",
+     "shell.execute_reply": "2024-05-08T14:54:00.900779Z"
     }
    },
    "outputs": [
@@ -41,12 +41,12 @@
       "Wave(amplitudes: list[float], frequency: float)\n",
       "    Function for computing time-harmonic electric fields.\n",
       "\n",
-      "        - `amplitudes`: electric field amplitudes in xyz-components\n",
-      "        - `frequency`: frequency\n",
+      "    Args:\n",
+      "        amplitudes: electric field amplitudes in xyz-components\n",
+      "        frequency: frequency\n",
       "\n",
-      "    **Returns:**\n",
-      "\n",
-      "    Function that computes the electric field as a functon of time\n",
+      "    Returns:\n",
+      "       Function that computes the electric field as a functon of time\n",
       "\n"
      ]
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06532e6",
+   "id": "ced727f9",
    "metadata": {},
    "source": [
     "So, calling \"Wave\" gives back a function we can evaluate at single points in time"
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "34169e3c",
+   "id": "8d8dcc0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:10:01.249508Z",
-     "iopub.status.busy": "2024-05-08T13:10:01.248930Z",
-     "iopub.status.idle": "2024-05-08T13:10:01.284617Z",
-     "shell.execute_reply": "2024-05-08T13:10:01.284031Z"
+     "iopub.execute_input": "2024-05-08T14:54:00.904161Z",
+     "iopub.status.busy": "2024-05-08T14:54:00.903696Z",
+     "iopub.status.idle": "2024-05-08T14:54:00.939814Z",
+     "shell.execute_reply": "2024-05-08T14:54:00.939195Z"
     }
    },
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f64d9ab5",
+   "id": "f0e3c7f0",
    "metadata": {},
    "source": [
     "A quick way to visualize them is to plot their real and imaginary part. JAX offers the vmap function that vectorizes the application."
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "69ab7633",
+   "id": "93985485",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:10:01.287152Z",
-     "iopub.status.busy": "2024-05-08T13:10:01.286702Z",
-     "iopub.status.idle": "2024-05-08T13:10:01.362761Z",
-     "shell.execute_reply": "2024-05-08T13:10:01.362150Z"
+     "iopub.execute_input": "2024-05-08T14:54:00.942483Z",
+     "iopub.status.busy": "2024-05-08T14:54:00.941955Z",
+     "iopub.status.idle": "2024-05-08T14:54:01.017045Z",
+     "shell.execute_reply": "2024-05-08T14:54:01.016483Z"
     }
    },
    "outputs": [
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0c853b48",
+   "id": "24c46dc6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:10:01.365373Z",
-     "iopub.status.busy": "2024-05-08T13:10:01.364996Z",
-     "iopub.status.idle": "2024-05-08T13:10:02.023221Z",
-     "shell.execute_reply": "2024-05-08T13:10:02.022540Z"
+     "iopub.execute_input": "2024-05-08T14:54:01.019466Z",
+     "iopub.status.busy": "2024-05-08T14:54:01.019105Z",
+     "iopub.status.idle": "2024-05-08T14:54:01.672382Z",
+     "shell.execute_reply": "2024-05-08T14:54:01.671755Z"
     }
    },
    "outputs": [
